# vlm-gym

./: .gitignore  LICENSE  MEMORY.md  NOTICE  README.md  colab.py  colab_setup.ipynb  pyproject.toml  train_lora.ipynb
core/: __init__.py  baseline_inference.py  batching.py  eval.py  grpo.py  kl.py  minibatch.py  policy.py  ppo.py  rollout.py  sampling.py  simple_hf_backend.py  trace.py  train.py  types.py
envs/: __init__.py  base.py  env_creator.py  geospot.py  nlvr2.py  osv5m.py  schedule.py  vision_caption.py
models/: __init__.py  lora.py  qwen3vl.py
models/qwen25vl/: __init__.py  model.py  vision.py
models/qwen3vl/: __init__.py  model.py  vision.py
notebooks/: osv5m_1k_sample_analysis.csv  osv5m_showcase.ipynb
scripts/: create_wandb_report.py  explore_osv5m.py
tests/: qwen25vl.py  qwen3vl.py
utils/: TUI_README.md  TUI_USAGE.md  __init__.py  checkpoint.py  configs.py  fullscreen_flash_demo.py  hf_to_jax.py  platform.py  rng.py  sharding.py  train_state.py  tui_attn_kv_mrope_mock.py  tui_live.py  tui_live_mockup.txt  tui_mockup.txt  tui_quickstart.txt  vlm.py  wandb.py
